product detail page similar issue done. add product color variant design. checkout request page add discount details.

--- a/checkout.html
+++ b/checkout.html
@@ -322,6 +322,10 @@
                                 <p class="text-orange">Subtotal</p>
                                 <p id="spnCheakoutSubTotalAmount" class="text-orange"></p>
                             </div>
+                            <div class="d-flex justify-content-between align-items-center" id="divDiscountOfferPrice">
+                                <p class="text-orange">Discount (<label id="spnOfferTitle"></label>)</p>
+                                <p id="spnCheakoutDiscountAmount" class="text-orange"></p>
+                            </div>
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="text-orange bold">Total</p>
                                 <p id="spnCheakoutTotalAmount" class="text-orange bold"></p>
