--- a/products.html
+++ b/products.html
@@ -193,7 +193,7 @@
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <div>
                     <nav class="nav">
-                        <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts()">View All</a>
+                        <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts('')">View All</a>
                         <a class="nav-link" href="javascript:void(0);"
                             onclick="GetFilterProducts('CASUAL SHOES')">Shoes</a>
                         <a class="nav-link" href="javascript:void(0);"
