Product Colour Image Add and Offer menu Added & Change Sweetalert message

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <body>
     <header>
         <!-- deals bar -->
-        <div class="bg-orange-60 d-none" style="width: 100%;">
-            <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF
-                50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
+        <div class="bg-orange-60 d-none" style="width: 100%;" id="divSelloffer">
+            <p class="text-white mb-0 py-3 text-center" id="spnOfferTitle"></p>
         </div>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg shadow">
