--- a/product-page.html
+++ b/product-page.html
@@ -217,7 +217,7 @@
                         <div class="border-bottom py-4">
                             <p class="text-orange font-14 bold text-uppercase">Color</p>
                             <div id="divColorList">
-                                <button class="btn-product-color btn rounded-5 p-0 mb-1">
+                                <!-- <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid"
                                         alt="product-color-img">
                                 </button>
@@ -232,7 +232,7 @@
                                 <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid"
                                         alt="product-color-img">
-                                </button>
+                                </button> -->
                             </div>
                         </div>
                         <div class=" py-4">
