Update Offer Menu, Update FAQ Content, Removed Cash On Delivery Tag & Menus Add on Product Page

--- a/cart.html
+++ b/cart.html
@@ -227,14 +227,15 @@
                         </div>
                         <div class="d-flex align-items-center">
                             <img src="wwwroot/images/return-icon.svg" class="me-2">
-                            <p class="text-orange me-2 me-lg-4 font-10 mb-0">7 Day Returns & Exchanges</p>
+                            <p class="text-orange me-2 me-lg-4 font-10 mb-0">15 days Replacement</p>
                         </div>
-                        <div class="d-flex align-items-center">
+                        <!-- <div class="d-flex align-items-center">
                             <img src="wwwroot/images/cod-icon.svg" class="me-2">
                             <p class="text-orange me-2 me-lg-4 font-10 mb-0">Cash on Delivery</p>
-                        </div>
+                        </div> -->
 
                     </div>
+
                 </div>
             </div>
         </section>
