--- a/faq.html
+++ b/faq.html
@@ -200,7 +200,8 @@
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">All our products are made using high quality Genuine leather.</div>
+                        <div class="accordion-body">All our products are made using high quality Genuine leather unless
+                            mentioned otherwise.</div>
                     </div>
                 </div>
                 <div class="accordion-item shadow mb-5">
@@ -260,6 +261,7 @@
             </div>
         </section>
     </main>
+    
 
     <div class="icon-bar">
         <a>
