--- a/products.html
+++ b/products.html
@@ -195,11 +195,19 @@
                     <nav class="nav">
                         <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts('')">View All</a>
                         <a class="nav-link" href="javascript:void(0);"
-                            onclick="GetFilterProducts('CASUAL SHOES')">Shoes</a>
+                            onclick="GetFilterProducts('Formal SHOES')">Formal Shoes</a>
+                        <a class="nav-link" href="javascript:void(0);"
+                            onclick="GetFilterProducts('CASUAL SHOES')">Casual Shoes</a>
+                        <a class="nav-link" href="javascript:void(0);"
+                            onclick="GetFilterProducts('Sandals')">Sandals</a>
                         <a class="nav-link" href="javascript:void(0);"
                             onclick="GetFilterProducts('Chappals')">Chappals</a>
+                        <!-- <a class="nav-link" href="javascript:void(0);"
+                            onclick="GetFilterProducts('Loafers')">Loafers</a> -->
                         <a class="nav-link" href="javascript:void(0);"
-                            onclick="GetFilterProducts('Loafers')">Loafers</a>
+                            onclick="GetFilterProducts('Diabetic Footwear')">Diabetic Footwears</a>
+                        <a class="nav-link" href="javascript:void(0);"
+                            onclick="GetFilterProducts('Accessories')">Accessories</a>
                     </nav>
                 </div>
 
