--- a/product-page.html
+++ b/product-page.html
@@ -283,24 +283,23 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="py-3">
-                            <h5 class="text-orange text-uppercase font-16 bold">SHIPPING & RETURNS</h5>
-                            <div class="d-flex justify-content-between">
-                                <div class="d-flex align-items-center">
-                                    <img src="wwwroot/images/shipping-icon.svg" class="me-2">
-                                    <p class="text-orange me-2 me-lg-4 font-10 mb-0">Free Shipping</p>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <img src="wwwroot/images/return-icon.svg" class="me-2">
-                                    <p class="text-orange me-2 me-lg-4 font-10 mb-0">7 Day Returns & Exchanges</p>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <img src="wwwroot/images/cod-icon.svg" class="me-2">
-                                    <p class="text-orange me-2 me-lg-4 font-10 mb-0">Cash on Delivery</p>
-                                </div>
-
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex align-items-center">
+                                <img src="wwwroot/images/shipping-icon.svg" class="me-2">
+                                <p class="text-orange me-2 me-lg-4 font-10 mb-0">Free Shipping</p>
                             </div>
+                            <div class="d-flex align-items-center">
+                                <img src="wwwroot/images/return-icon.svg" class="me-2">
+                                <p class="text-orange me-2 me-lg-4 font-10 mb-0">15 days Replacement</p>
+                            </div>
+                            <!-- <div class="d-flex align-items-center">
+                                <img src="wwwroot/images/cod-icon.svg" class="me-2">
+                                <p class="text-orange me-2 me-lg-4 font-10 mb-0">Cash on Delivery</p>
+                            </div> -->
+
                         </div>
+
+
                     </div>
                 </div>
             </div>
