--- a/product-page.html
+++ b/product-page.html
@@ -214,9 +214,9 @@
                             <p class="text-orange font-20 bold" id="spnProductName"></p>
                             <p class="text-orange font-16 semibold" id="spnProductPrice"></p>
                         </div>
-                        <div class="border-bottom py-4">
-                            <p class="text-orange font-14 bold text-uppercase">Color</p>
-                            <div id="divColorList">
+                        <div  id="divColorList">
+                            <!-- <p class="text-orange font-14 bold text-uppercase">Other Available Color</p> -->
+                            <div>
                                 <!-- <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid"
                                         alt="product-color-img">
