--- a/product-page.html
+++ b/product-page.html
@@ -283,7 +283,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-center gap-2">
                             <div class="d-flex align-items-center">
                                 <img src="wwwroot/images/shipping-icon.svg" class="me-2">
                                 <p class="text-orange me-2 me-lg-4 font-10 mb-0">Free Shipping</p>
