Color name on image & Slider of releted image are done

--- a/product-page.html
+++ b/product-page.html
@@ -214,9 +214,11 @@
                             <p class="text-orange font-20 bold" id="spnProductName"></p>
                             <p class="text-orange font-16 semibold" id="spnProductPrice"></p>
                         </div>
-                        <div  id="divColorList">
-                            <!-- <p class="text-orange font-14 bold text-uppercase">Other Available Color</p> -->
-                            <div>
+                        <div class="py-4"  id="divcolortitle">
+                            <p class="text-orange font-14 bold text-uppercase">Other Available Color</p>
+                        </div>
+
+                            <div id="divColorList" class="row">
                                 <!-- <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid"
                                         alt="product-color-img">
@@ -233,9 +235,8 @@
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid"
                                         alt="product-color-img">
                                 </button> -->
-                            </div>
                         </div>
-                        <div class=" py-4">
+                        <div class="py-4">
                             <div class="d-flex justify-content-between">
                                 <p class="text-orange font-14 bold text-uppercase">Size(UK):</p>
                                 <g clip-path="url(#clip0_312_1171)">
