shop now hide button and font change

--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
         imprzd_title_font_weight="700" imprzd_button_text="View More Posts" imprzd_button_url="testimonials.html"
         imprzd_button_color="#DB4834" imprzd_button_border_radius="10px" imprzd_button_font="Roboto Flex"
         imprzd_button_font_color="#FFF" imprzd_button_font_size="23" imprzd_button_font_weight="700"
-        imprzd_post_title_font="Inter" imprzd_post_title_font_color="#DB4834" imprzd_post_title_font_size="24"
-        imprzd_post_title_font_weight="700" imprzd_post_desc_font="Inter" imprzd_post_desc_font_color="#201D1D"
+        imprzd_post_title_font="Roboto Flex" imprzd_post_title_font_color="#DB4834" imprzd_post_title_font_size="24"
+        imprzd_post_title_font_weight="700" imprzd_post_desc_font="Roboto Flex" imprzd_post_desc_font_color="#201D1D"
         imprzd_post_desc_font_size="16" imprzd_post_desc_font_weight="400" imprzd_container_color="#FFF"
         imprzd_container_shadow_color="#ffffffaf" ,
         google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
