adjusted index page slider

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
 
     <main>
-        <section class="section__hero carousel slide p-3 row" id="carouselTopCollection">
-            <div class="row carousel-inner p-2" id="divTopCollection">
+        <section class="section__hero carousel slide p-3 row justify-content-center" id="carouselTopCollection">
+            <div class="row carousel-inner p-3" id="divTopCollection">
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselTopCollection"
                 data-bs-slide="prev">
