Admin Order Page Filter Chage

--- a/admin/login.html
+++ b/admin/login.html
@@ -33,7 +33,7 @@
                     <input type="password" class="form-control" id="adminPassword" placeholder="Password">
                 </div>
                 <div class="mb-3">
-                    <a class="text-orange text-decoration-none" href="#">Forgot your password?</a>
+                    <!-- <a class="text-orange text-decoration-none" href="#">Forgot your password?</a> -->
                 </div>
                 <div class="d-grid gap-2 d-md-block">
                     <button class="btn btn-2" type="button">Login</button>
