--- a/admin/orders.html
+++ b/admin/orders.html
@@ -111,10 +111,10 @@
                         <div>
                             <label for="selectStatus" class="d-block">Select Status</label>
                             <select multiple name="selectStatus" id="selectStatus" class="filter-multi-select">
-                                <option value="created">created</option>
-                                <option value="process">process</option>
-                                <option value="pending">pending</option>
-                                <option value="paid">paid</option>
+                                <option value="created">CREATED</option>
+                                <option value="process">PROCESS</option>
+                                <option value="pending">PENDING</option>
+                                <option value="paid">PAID</option>
                             </select>
                         </div>
                         <div>
