--- a/checkout.html
+++ b/checkout.html
@@ -192,16 +192,18 @@
             <h1 class="text-center text-orange my-3 font-60">Check Out</h1>
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 col-lg-6 px-0 px-lg-5">
-                    <div class="">
+                    <div class="" id="divbillingaddress">
                         <h4 class="text-orange bold font-35 mb-0 mb-lg-4">Billing Details</h4>
+                            <label for="" class="spnbilling">Delivery Address is same as Billing Address</label>
+                            <label for="">Yes</label> 
+                            <input type="checkbox" name="Address" id="btnchecked"> 
                         <form class="row g-3 my-3" id="yourForm">
-                            <div class="col-12">
-                                <label for="txtFirstName" class="form-label">First Name*</label><span id="spn_name"
-                                    style="color: red;"></span>
+                            <div class="form-group col-md-6">
+                                <label for="txtFirstName" class="form-label">First Name*</label>
                                 <input type="text" class="form-control" id="txtFirstName" value="" name="first_name"
                                     required>
                             </div>
-                            <div class="col-12">
+                            <div class="form-group col-md-6">
                                 <label for="txtLastName" class="form-label">Last name*</label>
                                 <input type="text" class="form-control" id="txtLastName" value="" name="last_name"
                                     required>
@@ -215,25 +217,77 @@
                                 <label for="txtAddress2" class="form-label">Apartment, floor, etc. (optional)</label>
                                 <textarea type="text" class="form-control" id="txtAddress2" rows="2"></textarea>
                             </div>
-                            <div class="col-12">
+                            <div class="form-group col-md-4">
                                 <label for="txtCity" class="form-label">Town/City*</label>
                                 <input type="text" class="form-control" id="txtCity" name="city" required>
                             </div>
-                            <div class="col-12">
+                            <div class="form-group col-md-4">
                                 <label for="txtstate" class="form-label">State*</label>
                                 <input type="text" class="form-control" id="txtstate" name="state" required>
                             </div>
-                            <div class="col-12">
+                            <div class="form-group col-md-4">
                                 <label for="txtPin" class="form-label">Pincode*</label>
                                 <input type="text" class="form-control" id="txtPin" maxlength="6" name="pincode"
                                     required>
                             </div>
-                            <div class="col-12">
+                            <div class="form-group col-md-4">
                                 <label for="txtPhone" class="form-label">Phone Number*</label>
                                 <input type="text" class="form-control" id="txtPhone" maxlength="10" name="phone_number"
                                     required>
                             </div>
+                            <div class="form-group col-md-8">
+                                <label for="txtEmail" class="form-label">Email Address*</label>
+                                <input type="text" class="form-control" id="txtEmail" name="Email_address" required>
+                            </div>
                             <div class="col-12">
+                                <!-- <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                                <label class="form-check-label" for="invalidCheck2">
+                                    Save this information for faster check-out next time
+                                </label>
+                              </div> -->
+                            </div>
+                        </form>
+                    </div>
+                    <div class="" id="divshippingaddress">
+                        <h4 class="text-orange bold font-35 mb-0 mb-lg-4">Shipping Details</h4>
+                        <form class="row g-3 my-3" id="shipping">
+                            <div class="form-group col-md-6">
+                                <label for="txtFirstName" class="form-label">First Name*</label>
+                                <input type="text" class="form-control" id="txtFirstName" value="" name="First_Name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="txtLastName" class="form-label">Last name*</label>
+                                <input type="text" class="form-control" id="txtLastName" value="" name="">
+                            </div>
+                            <div class="col-12">
+                                <label for="txtAddress" class="form-label">Street Address*</label>
+                                <textarea type="text" class="form-control" id="txtAddress" name="" rows="2"
+                                    style="color: black !important;"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <label for="txtAddress2" class="form-label">Apartment, floor, etc. (optional)</label>
+                                <textarea type="text" class="form-control" id="txtAddress2" rows="2"></textarea>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="txtCity" class="form-label">Town/City*</label>
+                                <input type="text" class="form-control" id="txtCity" name="" required>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="txtstate" class="form-label">State*</label>
+                                <input type="text" class="form-control" id="txtstate" name="" required>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="txtPin" class="form-label">Pincode*</label>
+                                <input type="text" class="form-control" id="txtPin" maxlength="6" name=""
+                                    required>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="txtPhone" class="form-label">Phone Number*</label>
+                                <input type="text" class="form-control" id="txtPhone" maxlength="10" name=""
+                                    required>
+                            </div>
+                            <div class="form-group col-md-8">
                                 <label for="txtEmail" class="form-label">Email Address*</label>
                                 <input type="text" class="form-control" id="txtEmail" name="Email_address" required>
                             </div>
