--- a/checkout.html
+++ b/checkout.html
@@ -258,11 +258,11 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="txtLastName" class="form-label">Last name*</label>
-                                <input type="text" class="form-control" id="txtLastName" value="" name="">
+                                <input type="text" class="form-control" id="txtLastName" value="" name="Last_Name">
                             </div>
                             <div class="col-12">
                                 <label for="txtAddress" class="form-label">Street Address*</label>
-                                <textarea type="text" class="form-control" id="txtAddress" name="" rows="2"
+                                <textarea type="text" class="form-control" id="txtAddress" name="Address" rows="2"
                                     style="color: black !important;"></textarea>
                             </div>
                             <div class="col-12">
@@ -271,25 +271,25 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="txtCity" class="form-label">Town/City*</label>
-                                <input type="text" class="form-control" id="txtCity" name="" required>
+                                <input type="text" class="form-control" id="txtCity" name="City" required>
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="txtstate" class="form-label">State*</label>
-                                <input type="text" class="form-control" id="txtstate" name="" required>
+                                <input type="text" class="form-control" id="txtstate" name="State" required>
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="txtPin" class="form-label">Pincode*</label>
-                                <input type="text" class="form-control" id="txtPin" maxlength="6" name=""
+                                <input type="text" class="form-control" id="txtPin" maxlength="6" name="Pincode"
                                     required>
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="txtPhone" class="form-label">Phone Number*</label>
-                                <input type="text" class="form-control" id="txtPhone" maxlength="10" name=""
+                                <input type="text" class="form-control" id="txtPhone" maxlength="10" name="Phone_Number"
                                     required>
                             </div>
                             <div class="form-group col-md-8">
                                 <label for="txtEmail" class="form-label">Email Address*</label>
-                                <input type="text" class="form-control" id="txtEmail" name="Email_address" required>
+                                <input type="text" class="form-control" id="txtEmail" name="Email_Address" required>
                             </div>
                             <div class="col-12">
                                 <!-- <div class="form-check">
@@ -400,7 +400,7 @@
     </main>
 
     <footer>
-        <div class="row bg-orange-20 p-4 g-0">
+        <div class="row bg-orange-20 p-4 g-0 mt-5">
             <div class="col-12 col-lg-2">
                 <img src="wwwroot/images/gaitonde-logo.svg" alt="gaitonde-logo" class="mb-3 img-fluid">
                 <!-- <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -432,6 +432,7 @@
                     <a class="nav-link font-12 px-2" href="terms_condition.html">Terms & Conditions</a>
                 </nav>
             </div>
+            
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Reach&nbsp;US</h5>
                 <nav class="nav flex-row flex-lg-column">
@@ -443,6 +444,7 @@
                     </p>
                 </nav>
             </div>
+
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
