--- a/admin/login.html
+++ b/admin/login.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,40 +13,59 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/wwwroot/css/styles.css">
 </head>
+
 <body class="bg-orange-0">
     <header>
         <div class="bg-orange-20 p-3" style="width: 100%; text-align: center;">
             <a class="text-center m-0 navbar-brand navbar-main-logo" href="#"><img
-                src="/wwwroot/images/gaitonde-logo.svg" class="img-fluid" alt="logo"></a>
+                    src="/wwwroot/images/gaitonde-logo.svg" class="img-fluid" alt="logo"></a>
         </div>
     </header>
     <main>
         <section style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
-            <div class="admin_login shadow">
+            <div class="admin_login shadow p-5">
                 <h1 class="text-center my-4">Sign In</h1>
-                <div class="mb-3">
-                    <label for="adminUsername" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="adminUsername" placeholder="Username">
-                </div>
-                <div class="mb-3">
-                    <label for="adminPassword" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="adminPassword" placeholder="Password">
-                </div>
-                <div class="mb-3">
-                    <!-- <a class="text-orange text-decoration-none" href="#">Forgot your password?</a> -->
-                </div>
-                <div class="d-grid gap-2 d-md-block">
-                    <button class="btn btn-2" type="button">Login</button>
-                    <button class="btn btn-2" type="button">Cancel</button>
-                </div>                  
+                <form id="loginform">
+                    <div class="mb-3">
+                        <label for="adminUsername" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="adminUsername" placeholder="Username"
+                            name="Username" required >
+                    </div>
+                    <div class="mb-3">
+                        <label for="adminPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="adminPassword" placeholder="Password"
+                            name="Password" required>
+                    </div>
+                    <div class="mb-3">
+                        <!-- <a class="text-orange text-decoration-none" href="#">Forgot your password?</a> -->
+                    </div>
+                    <div class="d-grid gap-2 d-md-block">
+                        <button class="btn btn-2" type="button" id="btn_login">Login</button>
+                        <button class="btn btn-2" type="button">Cancel</button>
+                    </div>
+                </form>
             </div>
         </section>
     </main>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.20.0/jquery.validate.min.js"
+        integrity="sha512-WMEKGZ7L5LWgaPeJtw9MBM4i5w5OSBlSjTjCtSnvFJGSVD26gE5+Td12qN5pvWXhuWaWcVwF++F7aqu9cvqP0A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/wwwroot/js/admin_login.js"></script>
+    <script>
+
+$.ajax({
+    type: "POST",
+    url: "https://gaitondeapi.imersive.io/api/user/login",
+    success: function(data) {
+    }
+  });
+
+    </script>
 </body>
+
 </html>
