Header change in admin page

--- a/admin/products.html
+++ b/admin/products.html
@@ -52,10 +52,13 @@
                             <a class="nav-link" href="/admin/products.html">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Manage</a>
+                            <a class="nav-link" href="#">Banner</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Analysis</a>
+                            <a class="nav-link" href="#">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Customer Details</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Logout</a>
