Login and Logout functationality

--- a/admin/login.html
+++ b/admin/login.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="d-grid gap-2 d-md-block">
                         <button class="btn btn-2" type="button" id="btn_login">Login</button>
-                        <button class="btn btn-2" type="button">Cancel</button>
+                        <button class="btn btn-2" type="button" id="btncancel">Cancel</button>
                     </div>
                 </form>
             </div>
