--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -85,15 +85,15 @@
                             <a class="nav-link" href="#">Customer Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
-                        </li>
+                            <a class="nav-link" href="" id="btnlogout">Logout</a>
+                            </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
     </header>
- <h1>Dashboard</h1>
+    <h1>Dashboard</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -105,8 +105,9 @@
     <script src="/wwwroot/js/filter-multi-select-bundle.min.js"></script>
     <script src="/wwwroot/js/admin_appsetting.js"></script>
     <script src="/wwwroot/js/admin_order.js"></script>
+    
     <script>
-        
+
     </script>
 </body>
 
