--- a/admin/orders.html
+++ b/admin/orders.html
@@ -85,7 +85,7 @@
                             <a class="nav-link" href="#">Customer Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="" id="btnlogout">Logout</a>
                         </li>
                     </ul>
                 </div>
