--- a/admin/products.html
+++ b/admin/products.html
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="#">Customer Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="" id="btnlogout">Logout</a>
                         </li>
                     </ul>
                 </div>
