--- a/admin/orders.html
+++ b/admin/orders.html
@@ -14,6 +14,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.datatables.net/v/dt/dt-2.0.5/datatables.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="/wwwroot/css/styles.css">
     <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_orange.css">
@@ -131,10 +132,11 @@
                         <thead class="bg-orange-30">
                             <tr>
                                 <th class="col-sm-1 center text-center">Order ID</th>
-                                <th class="col-sm-4 center text-center">Customer Name</th>
+                                <th class="col-sm-3 center text-center">Customer Name</th>
                                 <th class="col-sm-2 center text-center">Bill Value</th>
                                 <th class="col-sm-3 center text-center">Date</th>
                                 <th class="col-sm-2 center text-center">Order Status</th>
+                                <th class="col-sm-1 center text-center">Action</th>
                             </tr>
                         </thead>
                     </table>
